--- a/src/View/TelaBoasVindas.form
+++ b/src/View/TelaBoasVindas.form
@@ -63,6 +63,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Come&#xe7;ar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="inicioButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
