--- a/src/View/TelaChat.form
+++ b/src/View/TelaChat.form
@@ -69,6 +69,9 @@
     </Component>
     <Component class="java.awt.Button" name="enviarButton">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Cambria" size="12" style="1"/>
+        </Property>
         <Property name="label" type="java.lang.String" value="Enviar"/>
       </Properties>
     </Component>
