25-09.5 Estruturação do Código

--- a/src/View/TelaChat.form
+++ b/src/View/TelaChat.form
@@ -74,6 +74,9 @@
         </Property>
         <Property name="label" type="java.lang.String" value="Enviar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="enviarButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
